# amd_dx_gsa

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
assets/: AmdDxGsaCompile.h  example.dxc  example.fxc  example.hlsl
examples/: cmdline.rs  dump_section.rs
src/: amd_isa_devices.rs  dxbc.rs  interop.rs  lib.rs
