[package]
name = "amd_dx_gsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.3"

[dev-dependencies]
clap = { version = "3.2.21", features = ["derive"] }
object = "0.29.0"

[build-dependencies]
bindgen = "0.60.1"
